ft(locales):add house route"
ft(src): crud for house

update documentation
